<resources>
    <string name="app_name">EAC</string>
    <string name="bk_tittle">COMMON EXTERNAL TARIFF 2017 VERSION</string>
    <string name="east_african_community">EAST AFRICAN COMMUNITY</string>
    <string name="select_your_preferred_language">SELECT YOUR PREFERRED lANGUAGE</string>
    <string name="frenchimage">frenchimage</string>

    <string name="with_french">WITH FRENCH</string>
    <string name="continue_lng">CONTINUE</string>
    <string name="exit">Exit</string>
    <string name="turn_on_dark_theme">Turn on Dark Theme</string>
    <string name="contact_developer">Contact Developer</string>

    <string name="english">ENGLISH</string>
    <string name="french">FRENCH</string>
    <string name="kinyarwanda">KINYARWANDA</string>
    <string name="kiswahili">KISWAHILI</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
</resources>