<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.Welcome">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="-15dp"
                    android:text="@string/select_your_preferred_language"
                    android:id="@+id/pname"
                    android:gravity="center_horizontal" />
                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="30dp"
                    android:clipToPadding="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0dp"
                        android:orientation="vertical">


                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alignmentMode="alignMargins"
                            android:columnCount="2"
                            android:columnOrderPreserved="true"
                            android:rowCount="4">


                            <androidx.cardview.widget.CardView
                                android:id="@+id/prevention_tips"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_rowWeight="1"
                                android:layout_columnWeight="1"
                                android:layout_margin="8dp"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <ImageView
                                        android:layout_width="80dp"
                                        android:layout_height="80dp"
                                        android:src="@drawable/ugandaflag" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="12dp"
                                        android:text="@string/english"
                                        android:textColor="#6f6f6f"
                                        android:textSize="18dp" />

                                </LinearLayout>


                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/precriptionss"
                                android:layout_rowWeight="1"
                                android:layout_columnWeight="1"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="10dp"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp"
                                android:layout_marginRight="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <ImageView
                                        android:layout_width="80dp"
                                        android:layout_height="104dp"
                                        android:src="@drawable/frenchflag" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="12dp"
                                        android:text="@string/french"
                                        android:textColor="#6f6f6f"
                                        android:textSize="18dp" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/stories"
                                android:layout_rowWeight="1"
                                android:layout_columnWeight="1"
                                android:layout_margin="8dp"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <ImageView
                                        android:layout_width="80dp"
                                        android:layout_height="80dp"
                                        android:src="@drawable/rwandaflag" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="12dp"
                                        android:text="@string/kinyarwanda"
                                        android:textColor="#6f6f6f"
                                        android:textSize="18dp" />

                                </LinearLayout>


                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/meet_counselors"
                                android:layout_rowWeight="1"
                                android:layout_columnWeight="1"
                                android:layout_marginEnd="10dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp"
                                android:layout_marginRight="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <ImageView
                                        android:layout_width="80dp"
                                        android:layout_height="80dp"
                                        android:src="@drawable/tanzaniaflag" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="12dp"
                                        android:text="@string/kiswahili"
                                        android:textColor="#6f6f6f"
                                        android:textSize="18dp" />

                                </LinearLayout>


                            </androidx.cardview.widget.CardView>
                        </GridLayout>


                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/home_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hideOnScroll="true"
        android:layout_gravity="bottom"
        android:onClick="see_this"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"

        app:menu="@menu/bottom_app_bar"
        tools:ignore="MissingClass,UsingOnClickInXml" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_home"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/englishflag"
        app:layout_anchor="@id/home_navigation"

        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>